CHATS_SIT/force-app/main/default/objects/Exception_Log__c.object
<CustomObject>
    <description>The object stores all the exceptions that were catched through out the applications for debugging and reporting purpose.</description>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <description>Stores the message that was returned from the exception generated.</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Exception Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <description>Stores the type of exception that has occured</description>
        <label>Exception Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PII_Information__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>PII Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>This field will be populated for Call out exceptions and will store the request that was passed to the webservice call out.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>This field is specifically for call out exceptions. It will store the response that we received from the wenservice call outs.</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <description>Stores the stack trace returned from the Exception generated</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <formula>$Label.Environment</formula>
        <label>Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log</label>
    <nameField>
        <displayFormat>EL-{00000}</displayFormat>
        <label>Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>