CHATS_SIT/force-app/main/default/objects/Exception_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Message__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Method__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Response__c</columns>
    <columns>Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exception_Type__c</field>
        <operation>equals</operation>
        <value>Web Service</value>
    </filters>
    <label>All</label>
</ListView>