CHATS_SIT/force-app/main/default/objects/Exception_Log__c/listViews/Case_MissingInfo_List_View.listView-meta.xml
<ListView>
    <fullName>Case_MissingInfo_List_View</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Method__c</columns>
    <columns>Exception_Message__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Method__c</field>
        <operation>contains</operation>
        <value>15</value>
    </filters>
    <label>Case MissingInfo List View</label>
</ListView>