CHATS_SIT/force-app/main/default/objects/Exception_Log__c/listViews/Case_Review_Log.listView-meta.xml
<ListView>
    <fullName>Case_Review_Log</fullName>
    <columns>NAME</columns>
    <columns>Class__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Message__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Method__c</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Method__c</field>
        <operation>equals</operation>
        <value>saveCaseCopayRecord</value>
    </filters>
    <label>Case Review Log</label>
</ListView>