CHATS_SIT/force-app/main/default/objects/Exception_Log__c/listViews/Created_On.listView-meta.xml
<ListView>
    <fullName>Created_On</fullName>
    <columns>NAME</columns>
    <columns>Exception_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Request__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Type__c</columns>
    <columns>Class__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/29/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>CARLIE REED</value>
    </filters>
    <label>Created On</label>
</ListView>