CHATS_SIT/force-app/main/default/objects/Exception_Log__c/listViews/monthly_Exceptions.listView-meta.xml
<ListView>
    <fullName>monthly_Exceptions</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>monthly Exceptions</label>
</ListView>