CHATS_SIT/force-app/main/default/objects/Exception_Log__c/listViews/My_Search.listView-meta.xml
<ListView>
    <fullName>My_Search</fullName>
    <columns>NAME</columns>
    <columns>Exception_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Request__c</columns>
    <columns>Response__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exception_Type__c</field>
        <operation>equals</operation>
        <value>System.ExternalObjectException</value>
    </filters>
    <label>My Search</label>
</ListView>