CHATS_SIT/force-app/main/default/objects/Exception_Log__c/listViews/TaxInterceptCreationBatch.listView-meta.xml
<ListView>
    <fullName>TaxInterceptCreationBatch</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Exception_Message__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Class__c</field>
        <operation>contains</operation>
        <value>TaxInterceptCreationBatch</value>
    </filters>
    <label>TaxInterceptCreationBatch</label>
</ListView>