CHATS_SIT/force-app/main/default/objects/Exception_Log__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Exception_Message__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Class__c</columns>
    <columns>Method__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>10/20/2025 12:00 AM</value>
    </filters>
    <label>Today</label>
</ListView>